2000-10-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* drag.cc: weight checking disabled when in hack_mover mode

2000-10-12  Jeff Freedman  <jeff@amy.nerble.net>

	* readnpcs.cc: Fixed monster bug that's been causing lots of
	crashes upon game load.

2000-10-11  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Support ring-of-protection (which doesn't seem to
	work in the original U7).

2000-10-09  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Rings work now.

2000-10-08  Jeff Freedman  <jeff@amy.nerble.net>

	* Show invisible NPC's as shadows.
	* Added primitive 'xform' support to shape browser.

2000-10-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Working on invisibiliy and protection flags.
	* Worked a 'sleep' flag.  Poppy field now works.

2000-10-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Put in Artaxerxes' body shapes.
	* Use 'belt' position on paperdoll.

2000-10-04  Jeff Freedman  <jeff@amy.nerble.net>

	* Restart_game() intrinsic implemented.

2000-10-03  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Guards attack when you steel.
	* Fixed crash when you enter LB's castle.

2000-10-02  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Compute/show weight carried (but don't check yet).

2000-10-01  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Working on theft.  Also messed with pathfinding.

2000-09-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc, usecode.cc: location marker on map changed to yellow
	* exult.cc, drag.cc: added 'hack-mover' cheat (can move _anything_)
	* browser.cc: show shape outline & display dimensions
	* vgafile.cc, vgafile.h: fixed (xleft, yabove, xright, ybelow)

2000-09-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	
	* actors.cc: fixed bug in godmode: poison/hunger do no damage in GM now
	* bodies.cc: added/changed body shape/frames (from Jackchaos forum)

2000-09-28  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Explosions do damage.
