@@ -1,6 +1,7 @@
 2000-10-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 
 	* drag.cc: weight checking disabled when in hack_mover mode
+	* exult.cc, gameclk.cc: added alt-i=infravision. (palette never darkens)
 
 2000-10-12  Jeff Freedman  <jeff@amy.nerble.net>
 
